trivial: add udisks2 hat-tip

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,4 @@
 Richard Hughes <richard@hughsie.com>
+
+A lot of the boilerplate code has been taken from udisks2, which was
+written by David Zeuthen <davidz@redhat.com>
